Fiddle with fonts

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>LangPlz</title>
+        <link rel="stylesheet" href="./style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>hello world</h1>
+        <h1>making a programming language</h1>
         <script src="./index.js"></script>
+
+        <textarea>print("hello");</textarea>
     </body>
 </html>
