Install bulma and apply styling

--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
         <meta charset="utf-8">
         <title>LangPlz</title>
         <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./node_modules/bulma/css/bulma.css">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>making a programming language</h1>
+        <section class="hero is-primary">
+            <div class="hero-body">
+                <div class="container">
+                    <h1 class="title">
+                        making a programming language 👨‍🍳
+                    </h1>
+                    <h2 class="subtitle">
+                        add syntax to taste
+                    </h2>
+                </div>
+            </div>
+        </section>
+
+        <div class="container">
+            <textarea class="textarea">print("hello");</textarea>
+            <div class="notification">
+                <button class="button">Run It</button>
+            </div>
+        </div>
+        
         <script src="./index.js"></script>
 
-        <textarea>print("hello");</textarea>
+        
     </body>
 </html>
