--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             </div>
         </section>
 
-        <div class="container">
-            <textarea class="textarea">print("hello");</textarea>
-            <div class="notification">
-                <button class="button">Run It</button>
+        <section class="section">
+            <div class="container">
+                <textarea class="textarea">print("hello");</textarea>
+                <div class="notification">
+                    <button class="button">Run It</button>
+                </div>
             </div>
-        </div>
-        
-        <script src="./index.js"></script>
+        </section>
 
-        
+        <script src="./index.js"></script>
     </body>
 </html>
