Hook up a trivial parser

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 
         <section class="section">
             <div class="container">
-                <textarea class="textarea">print("hello");</textarea>
+                <textarea id="input" class="textarea">print("hello");</textarea>
                 <div class="notification">
                     <button class="button">Run It</button>
+                    <pre id="output">output here</pre>
                 </div>
             </div>
         </section>
