--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>LangPlz</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./node_modules/bulma/css/bulma.css">
+        <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css">
+        <link rel="stylesheet" href="./node_modules/codemirror/theme/material-palenight.css">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
