--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <div class="box">
                 <h2 class="title">Write Code 🍳</h2>
                 
-                <textarea id="input" class="textarea">print("hello");</textarea>
+                <textarea id="input" class="textarea">; My Wonderful Language
+(print "hello")</textarea>
                 </div>
 
                 <div class="box">
