Allow changing comment syntax dynamically

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="field">
                     <label class="label">Comments</label>
                     <div class="control">
-                        <input class="input" type="text" placeholder="Comment character">
+                        <input id="comment" class="input" type="text" placeholder="Comment character" value=";">
                     </div>
                     <p class="help">Prefix character for single line comments</p>
                 </div>
