--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="box">
                     <h2 class="title">Execute It 🍽️</h2>
                 
-                    <button class="button">Run It</button>
+                    <button id="run" class="button">Run It</button>
                     <pre id="output">output here</pre>
                 </div>
             </div>
