Display runtime output on page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                     <h2 class="title">Execute It 🍽️</h2>
                 
                     <button id="run" class="button">Run It</button>
-                    <pre id="output">output here</pre>
+                    <pre id="output">stdout here</pre>
+                    <pre id="ast-output">Syntax Tree here</pre>
                 </div>
             </div>
         </section>
