Tweaking header style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title">
-                        making a programming language 👨‍🍳
+                        The Language Diner 👨‍🍳
                     </h1>
                     <h2 class="subtitle">
                         add syntax to taste
