Define lexer options as a react component

--- a/index.html
+++ b/index.html
@@ -26,15 +26,8 @@
         <section class="section">
             <div class="container">
                 <div class="box">
-                <h2 class="title">Choose Ingredients 🥚</h2>
-                
-                <div class="field">
-                    <label class="label">Comments</label>
-                    <div class="control">
-                        <input id="comment" class="input" type="text" placeholder="Comment character" value=";">
-                    </div>
-                    <p class="help">Prefix character for single line comments</p>
-                </div>
+                    <h2 class="title">Choose Ingredients 🥚</h2>
+                    <div id="app"></div>
                 </div>
 
                 <div class="box">
