Move source files to src/

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./node_modules/bulma/css/bulma.css">
         <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./src/style.css">
     </head>
     <body>
         <section class="hero is-primary">
@@ -28,6 +28,6 @@
             </div>
         </section>
 
-        <script src="./index.js"></script>
+        <script src="./src/index.js"></script>
     </body>
 </html>
