--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>LangPlz</title>
+        <title>The Language Diner</title>
         <link rel="stylesheet" href="./node_modules/bulma/css/bulma.css">
         <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
