Add link to github

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             <div class="container">
                 <div id="app"></div>
             </div>
+            <footer class="footer">
+                <div class="content has-text-centered">
+                    <p>
+                        📃 Recipes <a href="https://github.com/Wilfred/language-diner">on GitHub</a>.
+                    </p>
+                </div>
+            </footer>
         </section>
 
         <script src="./src/index.js"></script>
