--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./src/style.css">
+        <link rel="icon" type="image/png" href="./src/favicon.png">
     </head>
     <body>
         <section class="hero is-primary">
@@ -36,5 +37,6 @@
         </section>
 
         <script src="./src/index.js"></script>
+        <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
     </body>
 </html>
