Ensure we use twemoji on the page body

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
 
         <script src="./src/index.js"></script>
         <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
+        <script src="./src/emoji.js"></script>
     </body>
 </html>
