--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>The Language Diner</title>
+        <title>Syntax Café</title>
         <link rel="stylesheet" href="./node_modules/bulma/css/bulma.css">
         <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -14,10 +14,10 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title">
-                        The Language Diner 👨‍🍳
+                        Syntax Café 👨‍🍳
                     </h1>
                     <h2 class="subtitle">
-                        add syntax to taste
+                        languages for all tastes
                     </h2>
                 </div>
             </div>
