Text change to test deploy

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         Syntax Café 👨‍🍳
                     </h1>
                     <h2 class="subtitle">
-                        languages for all tastes
+                        languages for all tastes.
                     </h2>
                 </div>
             </div>
