Overhaulting UI structure

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <footer class="footer">
                 <div class="content has-text-centered">
                     <p>
-                        📖 Recipes <a href="https://github.com/Wilfred/language-diner">on GitHub</a>.
+                        Consumption of undercooked languages may lead to dissatisfaction with your existing tools. <a href="#">Nutrition information</a>.
                     </p>
                 </div>
             </footer>
